add dragonfly caching support
