# internal/models/authorization.go
@@ -2,6 +2,7 @@ package models
 
 // LoginRequest swagger::model
 type LoginRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Email               string `json:"email"`
+	Password            string `json:"password"`
+	SmartToyFingerPrint string `json:"fingerprint"`
 }
