# internal/models/refresh.go
@@ -1,0 +1,6 @@
+package models
+
+// RefreshTokensRequest swagger::model
+type RefreshTokensRequest struct {
+	SmartToyFingerPrint string `json:"fingerprint"`
+}
