# internal/models/registration.go
@@ -2,7 +2,7 @@ package models
 
 // RegisterRequest swagger::model
 type RegisterRequest struct {
-	Email       string `json:"email"`
-	ChannelName string `json:"channel_name"`
-	Password    string `json:"password"`
+	Email               string `json:"email"`
+	Password            string `json:"password"`
+	SmartToyFingerPrint string `json:"fingerprint"`
 }
