# internal/models/smartToy.go
@@ -1,0 +1,8 @@
+package models
+
+import "github.com/google/uuid"
+
+type SmartToy struct {
+	Uuid        uuid.UUID `db:"smart_toy_uuid"`
+	FingerPrint string    `db:"fingerprint"`
+}
